--- a/final/css/style.css
+++ b/final/css/style.css
@@ -5,26 +5,25 @@ body {
   color: #fff;
   font-size: 1em;
   font-family: "Gotham Rounded A", "Gotham Rounded B", "Gotham Rounded", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding-top: 1em;
   background-color: #42b4d6;
 }
 
 main {
   width: 60%;
   max-width: 1080px;
-  padding: 40px 0 0;
+  padding: 1em 0 2em;
   margin: 0 auto;
 }
 
 h1 {
   font-size: 3.75em;
-  text-align: center;
-  margin-bottom: 0.35em;
+  margin-bottom: 0.5em;
   text-shadow: 0 2px 0 rgba(0,0,0, 0.1);
 }
 
 h2 {
   font-size: 2.5em;
+  margin-top: 1.5em;
   font-weight: normal;
 }
 
